--- a/neo3-gui/neo3-gui/ClientApp/package.json
+++ b/neo3-gui/neo3-gui/ClientApp/package.json
@@ -75,6 +75,8 @@
     "start": "cross-env BROWSER=none node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "fetch-neo-assets": "node ../scripts/fetch-leveldbstore.js",
+    "prepublish": "npm run fetch-neo-assets",
     "build-electron": "electron-builder",
     "start-electron": "cross-env NODE_ENV=development electron .",
     "start-electron-prod": "electron .",
